--- a/style.css
+++ b/style.css
@@ -6,9 +6,8 @@
 html {
   font-family: "Inter", sans-serif;
   font-style: normal;
-
 }
-body{
+body {
   overflow-x: hidden;
   scroll-behavior: smooth;
 }
@@ -24,12 +23,12 @@ img {
 :root {
   --font-xxl: 3.188rem;
   --font-xl: 2.188rem;
-
   --font-lg: 2rem;
   --font-sm: 1rem;
   --font-xsm: 0.875rem;
   --color-primary: #06c167;
   --color-accent: #f3fcf7;
+  --color-accent-mobile:#F0F1EC;
   --color-white: #ffffff;
   --color-dark-400: #1d1d1f;
 }
@@ -45,7 +44,7 @@ img {
   width: 95vw;
   margin: 0 auto;
 }
-@media (min-width:768px) {
+@media (min-width: 768px) {
   .container {
     width: 80vw;
   }
@@ -100,15 +99,16 @@ img {
 }
 .grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
 }
 
 /* ////////////////////////////////////////////////////////////////////// */
 
-/* header area */
+/*/////////////////////////////////////// header area */
 .inner--header--section {
   height: 80px;
   position: relative;
+  overflow-x: hidden;
 }
 .header--logo a {
   font-size: var(--font-xl);
@@ -145,6 +145,7 @@ img {
   width: 100%;
   height: 70vh;
   transition: all 0.5s ease-in-out;
+  z-index: 1;
 }
 .active .header--navigation {
   right: 0;
@@ -154,6 +155,7 @@ img {
   font-size: var(--font-lg);
   color: var(--color-primary);
 }
+/* ////////////////////////////////////////// header desktop design */
 @media (min-width: 768px) {
   .header--navigation {
     position: static;
@@ -164,7 +166,7 @@ img {
     display: none;
   }
 }
-/* hero area */
+/* ////////////////////////////////////////// hero area */
 body::after {
   content: "";
   position: absolute;
@@ -197,6 +199,22 @@ body::after {
   background: var(--color-primary);
   color: var(--color-white);
   margin: 40px 0;
+  width: 100%;
+}
+.hero--section__contant a span {
+  position: relative;
+  left: 20px;
+}
+.hero--section__brands {
+  justify-content: center;
+  width: auto;
+}
+.hero--section__brands .group1,
+.group2 {
+  width: 45%;
+}
+.hero--section__brands .group3 {
+  width: 45%;
 }
 .hero--section__image {
   position: relative;
@@ -207,11 +225,12 @@ body::after {
 }
 .hero--section__rating {
   position: absolute;
-  left: 40%;
-  bottom: 10%;
+  left: 25%;
+  bottom: 25%;
   background: var(--color-white);
   padding: 15px;
   border-radius: 30px;
+  z-index: 999;
 }
 .hero--section__rating span {
   font-size: 15px;
@@ -225,23 +244,28 @@ body::after {
 }
 .hero--section__comment {
   position: absolute;
-  bottom: 20%;
-  right: 40%;
+  top: 78%;
+  right: 18%;
   background: var(--color-white);
-  padding: 8px;
+  padding: 5px 10px;
   border-radius: 50px;
-  height: 53px;
+  z-index: 999;
+}
+.hero--section__comment--image img {
+  margin-top: 2px;
 }
 .hero--section__comment h5 {
   font-size: 15px;
   color: var(--color-dark-400);
   font-weight: 500;
+  line-height: 1rem;
 }
 .hero--section__dot {
   position: absolute;
   right: 0;
   bottom: 0;
 }
+/* ////////////////////////////////////////// desktop hero area design*/
 @media (min-width: 768px) {
   .hero--section__contant {
     width: 50%;
@@ -258,12 +282,24 @@ body::after {
     left: -50px;
     bottom: 40%;
   }
+  .hero--section__contant a {
+    width: 200px;
+  }
+  .hero--section__brands {
+    justify-content: center;
+    width: 60%;
+  }
 }
-/* feature area */
+/* ///////////////////////////////////// feature area */
 .inner--feature {
   border-bottom: 1px solid #bdbdbd;
   border-top: 1px solid #bdbdbd;
   padding: 30px 0;
+  height: auto;
+}
+.feature__card {
+  width: 42%;
+  gap: 10;
 }
 .feature__card span {
   font-size: 25px;
@@ -282,8 +318,140 @@ body::after {
   font-weight: 500;
   color: var(--color-dark-400);
 }
-/* about area */
-/* stats area */
+/* ///////////////////////////////////// dexktop feature area design */
+@media (min-width: 768px) {
+  .inner--feature {
+    height: 185px;
+  }
+  .feature__card {
+    width: auto;
+    gap: 30;
+  }
+}
+/* //////////////////////////////////// about area */
+.inner--about {
+  padding: 100px 0;
+}
+.inner--about__imageSide {
+  padding: 0 30px 60px 30px;
+  background: transparent;
+  position: relative;
+  height: auto;
+}
+.inner--about__imageSide::after{
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 92%;
+  background: var(--color-accent-mobile);
+  z-index: -1;
+  display: block;
+}
+.inner--about__contentSide span {
+  font-weight: 500;
+  font-style: Medium;
+  font-size: 15px;
+}
+.inner--about__contentSide h3{
+  font-size: var(--font-xl);
+  font-weight: 500;
+  margin: 30px 0; 
+  color: var(--color-dark-400);
+}
+.inner--about__contentSide ul{
+  margin: 50px 0;
+}
+.inner--about__contentSide ul span{
+  color: var(--color-primary);
+  font-size: var(--font-sm);
+  margin-right: 10px;
+}
+.inner--about__contentSide ul li{
+  line-height: 40px;
+  font-size: var(--font-sm);
+  color: var(--color-dark-400);
+}
+@media (min-width:768px){
+  .inner--about__imageSide {
+    padding: 0 50px 80px 50px;
+  background: var(--color-accent);
+}
+  .inner--about__imageSide::after{
+    content: '';
+  display: none;
+}
+  .inner--about__contentSide h3{
+  text-align: left;
+}
+.inner--about__contentSide span {
+  text-align: left;
+}
+}
+/* ////////////////////////////////// stats area */
+.inner--stats{
+  flex-direction: column-reverse;
+}
+
+.inner--stats__number{
+  width: 400px;
+}
+.inner--stats__contentSide span{
+  font-weight: 500;
+  font-style: Medium;
+  font-size: 15px;
+}
+.inner--stats__contentSide h3{
+  font-size: var(--font-xl);
+  font-weight: 500;
+  margin: 30px 0; 
+  color: var(--color-dark-400);
+}
+
+.inner--stats__number span{
+  font-size: 40px;
+  color: var(--color-primary);
+  font-weight: 500;
+}
+.inner--stats__imageSide{
+  padding: 0 30px 60px 30px;
+  background: transparent;
+  position: relative;
+  height: auto;
+}
+.inner--stats__imageSide::after{
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 92%;
+  background: var(--color-accent-mobile);
+  z-index: -1;
+  display: block;
+}
+
+@media (min-width:768px){
+  .inner--stats{
+  text-align: left;
+}
+  .inner--stats__imageSide{
+    padding: 0 0 80px 50px;
+  background: var(--color-accent);
+  }
+  .inner--stats__imageSide::after{
+    content: '';
+    display: none;
+  }
+  .inner--stats{
+    flex-direction: row;
+  }
+  .inner--stats__number{
+  flex-direction: row;
+}
+}
+  
 /* category area */
 /* popular products area */
 /* call to action area */
