--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ img {
     --font-xl: 3.75rem;
   }
 }
-/* custom utility class */
+/* /////////////////////////////////////////////////// custom utility class */
 
 .container {
   width: 95vw;
@@ -84,7 +84,7 @@ img {
 .reverse-col {
   flex-direction: column-reverse;
 }
-
+/* //////////////////////////////////////// responsive flex utility class */
 @media (min-width: 768px) {
   .flex-wrap {
     flex-wrap: nowrap;
@@ -96,6 +96,7 @@ img {
     flex-direction: row;
   }
 }
+/* //////////////////////////////////////// */
 .inline-block {
   display: inline-block;
 }
@@ -105,11 +106,19 @@ img {
 .text-center {
   text-align: center;
 }
-.grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
-}
 
+/* //////////////////////////// responsive button design */
+.title-top {
+  font-weight: 500;
+  color: var(--color-dark-400);
+  font-size: 15px;
+}
+.section-title {
+  font-size: var(--font-xl);
+  font-weight: 500;
+  margin: 30px 0;
+  color: var(--color-dark-400);
+}
 .btn {
   padding: 20px 20px;
   font-size: var(--font-sm);
@@ -118,20 +127,23 @@ img {
   margin: 40px 0;
   width: 100%;
 }
-
 @media (min-width: 768px) {
   .btn {
     width: 200px;
   }
+  .section-title {
+    text-align: left;
+  }
+  .title-top {
+    text-align: left;
+  }
 }
-
 /* ////////////////////////////////////////////////////////////////////// */
 
 /*/////////////////////////////////////// header area */
 .inner--header--section {
   height: 80px;
   position: relative;
-  overflow-x: hidden;
 }
 .header--logo a {
   font-size: var(--font-xl);
@@ -220,7 +232,6 @@ body::after {
   position: relative;
   left: 20px;
 }
-
 .hero--section__brands {
   justify-content: center;
   width: auto;
@@ -331,7 +342,7 @@ body::after {
   font-weight: 500;
   color: var(--color-dark-400);
 }
-/* ///////////////////////////////////// dexktop feature area design */
+/* ///////////////////////////////////// desktop feature area design */
 @media (min-width: 768px) {
   .inner--feature {
     height: 185px;
@@ -363,15 +374,6 @@ body::after {
   display: block;
 }
 .inner--about__contentSide span {
-  font-weight: 500;
-  font-style: Medium;
-  font-size: 15px;
-}
-.inner--about__contentSide h3 {
-  font-size: var(--font-xl);
-  font-weight: 500;
-  margin: 30px 0;
-  color: var(--color-dark-400);
 }
 .inner--about__contentSide ul {
   margin: 50px 0;
@@ -386,6 +388,7 @@ body::after {
   font-size: var(--font-sm);
   color: var(--color-dark-400);
 }
+/* //////////////////////////////////// desktop about area */
 @media (min-width: 768px) {
   .inner--about__imageSide {
     padding: 0 50px 80px 50px;
@@ -394,9 +397,6 @@ body::after {
   .inner--about__imageSide::after {
     content: "";
     display: none;
-  }
-  .inner--about__contentSide h3 {
-    text-align: left;
   }
   .inner--about__contentSide span {
     text-align: left;
@@ -410,18 +410,12 @@ body::after {
 .inner--stats__number {
   width: 400px;
 }
-.inner--stats__contentSide span {
-  font-weight: 500;
-  font-style: Medium;
-  font-size: 15px;
-}
 .inner--stats__contentSide h3 {
   font-size: var(--font-xl);
   font-weight: 500;
   margin: 30px 0;
   color: var(--color-dark-400);
 }
-
 .inner--stats__number span {
   font-size: 40px;
   color: var(--color-primary);
@@ -444,7 +438,7 @@ body::after {
   z-index: -1;
   display: block;
 }
-
+/* ///////////////////////////////////////// desktop stats area design */
 @media (min-width: 768px) {
   .inner--stats {
     text-align: left;
@@ -464,21 +458,13 @@ body::after {
     flex-direction: row;
   }
 }
-
 /* //////////////////////////////////////// category area */
 .inner--category {
   padding: 100px 0;
 }
-.inner--category span {
-  font-weight: 500;
-  font-style: Medium;
-  font-size: 15px;
-}
+
 .inner--category h3 {
-  font-size: var(--font-xl);
-  font-weight: 500;
-  margin: 15px 0;
-  color: var(--color-dark-400);
+  text-align: center;
 }
 .category--box {
   text-align: left;
@@ -506,7 +492,7 @@ body::after {
   margin: 30px 0;
 }
 .category--box__content a {
-  padding: 10px 30px;
+  padding: 15px 30px;
   background: var(--color-accent2);
   color: var(--color-primary);
 }
@@ -514,9 +500,7 @@ body::after {
   width: 100%;
   height: 292px;
 }
-
 /* //////////////////////////////////////// desktop category area design */
-
 @media (min-width: 768px) {
   .category--box__content {
     background: var(--color-accent);
@@ -530,12 +514,6 @@ body::after {
   }
 }
 /* ////////////////////////////////////// popular products area */
-.popular--products--section h3 {
-  font-size: var(--font-xl);
-  font-weight: 500;
-  color: var(--color-dark-400);
-  padding: 0 50px;
-}
 .inner--products__container {
   padding: 50px 0;
 }
@@ -572,7 +550,7 @@ body::after {
 .hover:hover {
   border: 2px solid var(--color-primary);
 }
-
+/* ////////////////////////////////////// desktop popular products design */
 @media (min-width: 768px) {
   .popular--products--section {
     text-align: left;
@@ -586,8 +564,7 @@ body::after {
     padding: 0;
   }
 }
-/* call to action area */
-
+/* ////////////////////////////////////////// call to action area */
 .inner--cta {
   background: url(./image/cta-bg.png) no-repeat center center, #0c0c0c54;
   background-size: cover;
@@ -601,79 +578,91 @@ body::after {
   color: var(--color-white);
   font-weight: 500;
 }
+/* ////////////////////////////////////////// desktop call to action design */
 @media (min-width: 768px) {
   .inner--cta {
     padding: 0;
   }
 }
-
-/* footer area */
-.inner--footer{
+/* /////////////////////////////////////////// footer area */
+.inner--footer {
   height: 100%;
+  padding-bottom: 100px;
 }
-.about--foodies{
+.about--foodies {
   width: 210px;
 }
-.about--foodies p{
+.about--foodies p {
   padding: 30px 0;
 }
-.inner--footer a{
-    color: var(--color-dark-400);
+.inner--footer a {
+  color: var(--color-dark-400);
   font-size: var(--font-sm);
   line-height: 30px;
 }
-.inner--footer h4{
+.inner--footer h4 {
   font-size: 24px;
   font-weight: 500;
   margin-bottom: 20px;
 }
-.about--foodies h2{
+.about--foodies h2 {
   font-size: var(--font-lg);
   font-weight: 500;
   color: var(--color-primary);
 }
-.about--foodies p{
-  margin: 20px 0;
+.about--foodies p {
+  color: var(--color-dark-400);
+  font-size: var(--font-sm);
+  font-weight: 400;
+  padding: 25px 0;
 }
-.companey--newsLetter{
+.companey--newsLetter {
   width: 338px;
 }
-.companey--newsLetter p{
+.companey--newsLetter p {
   font-size: var(--font-sm);
   font-weight: 400;
   color: var(--color-dark-400);
-  margin: 20px;
+  margin: 20px 0;
 }
-.newsLetter__btn{
+.newsLetter__btn {
   gap: 0;
   height: 40px;
 }
-.companey--newsLetter .email--feld{
+.companey--newsLetter .email--feld {
   width: 100%;
   height: 50px;
   border: none;
   background: var(--color-accent-mobile);
   padding: 0 20px;
 }
-.companey--newsLetter .submit--btn{
+.companey--newsLetter .submit--btn {
   border: none;
   margin: 5px 0;
 }
-@media (min-width:768px){
-  .footer--section{
-  text-align: left;
+.footer--copey {
+  padding: 20px 0;
 }
-.about--foodies ul{
-  justify-content: flex-start;
-}
-.companey--newsLetter .email--feld{
-  width: 205px;
-}
-.companey--newsLetter .submit--btn{
-  padding: 15px 20px;
-}
-.newsLetter__btn{
+
+/* //////////////////////////////////////// desktop footer design */
+@media (min-width: 768px) {
+  .inner--footer {
+    padding-bottom: 0;
+  }
+  .footer--section {
+    text-align: left;
+  }
+  .about--foodies ul {
+    justify-content: flex-start;
+  }
+  .companey--newsLetter .email--feld {
+    width: 205px;
+  }
+  .companey--newsLetter .submit--btn {
+    padding: 15px 20px;
+  }
+  .newsLetter__btn {
     height: 80px;
-  gap: 10px;
-}
+    gap: 10px;
+  }
 }
